components/mm1-sup/src/mixed/strategy/all_for_one/snapshots/mm1_sup__mixed__strategy__all_for_one__tests__mixed::strategy::all_for_one::tests::run::add_started_exited_max_restart_intensity_not_reached.snap
---
source: components/mm1-sup/src/mixed/strategy/all_for_one/tests.rs
expression: report
---
- "RestartIntensity { max_restarts: 1, within: 30s }"
- "ADD     [one|Permanent]"
- DECIDE
- ">>> Start(one)"
- "STARTED [one] / <:1>"
- DECIDE
- ">>> InitDone"
- DELAY 40s
- "EXITED  <:1> normal_exit=false"
- DECIDE
- ">>> Start(one)"
- "STARTED [one] / <:2>"
