components/mm1-sup/src/mixed/strategy/all_for_one/snapshots/mm1_sup__mixed__strategy__all_for_one__tests__mixed::strategy::all_for_one::tests::run::an_orphan.snap
---
source: components/mm1-sup/src/mixed/strategy/all_for_one/tests.rs
expression: report
---
- "RestartIntensity { max_restarts: 1, within: 30s }"
- "ADD     [one]"
- DECIDE
- ">>> Start(one)"
- "STARTED [one] / <:1>"
- DECIDE
- ">>> InitDone"
- "STARTED [one] / <:2>"
- DECIDE
- ">>> Stop(<:2>, None)"
